Issue #1349: Add 'nowrap' CSS to field suffixes.

--- a/core/themes/basis/css/component/backdrop-form.css
+++ b/core/themes/basis/css/component/backdrop-form.css
@@ -126,6 +126,7 @@ td.checkbox .form-item input {
 .field-suffix {
   display: block;
   padding: 0.5em 0 0;
+  white-space: nowrap;
 }
 
 .field-suffix .machine-name-value {
